fixed overflow issue with github link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,13 @@ body {
     justify-content: center;
 }
 
+section {
+    border: 1px solid var(--niceTeal);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 header, footer {
     border-color: var(--green);
 }
@@ -151,13 +158,6 @@ a:hover, button:hover {
     background-image: var(--linkGradient);
 }
 
-#password-body, #footer {
-    border: 1px solid var(--niceTeal);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 p, li, a, button, textarea, input {
     font-family: 'Times New Roman', Times, serif;
     font-size: x-large;
@@ -218,11 +218,10 @@ form {
     footer {
         display: block;
     }
+    
     footer a {
+        display: inline-block;
         margin: 0px 3px 6px 3px;
-    }
-    footer button {
-        margin: 6px 3px;
     }
 }
 
